--- a/src/components/app/app.styles.css
+++ b/src/components/app/app.styles.css
@@ -1,4 +1,4 @@
-.imageDiv{
+.imgContainer{
     margin: 30px;
 }
 
@@ -10,7 +10,9 @@
 }
 
 .nasa-logo{
-    width: 20%;
-    height: 20%;
+    width: 25%;
+    height: 25%;
 }
+
+
 
