refactor: Created <RoverPage/> component and migrated necssary code

--- a/src/components/searchform/searchform.styles.scss
+++ b/src/components/searchform/searchform.styles.scss
@@ -1,3 +1,6 @@
 .searchForm{
-    margin-top: 150px;
+    margin: 30px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
 }
