--- a/src/components/APOD/apod.styles.scss
+++ b/src/components/APOD/apod.styles.scss
@@ -6,6 +6,16 @@
 }
 
 .image-of-the-day{
-    width: 90vw;
-    height: 100%;
+    width: 80vw;
+    height: 80%;
+}
+
+.pageTitle{
+    font-size: 8em;
+    color: "#212121"
+}
+
+.pageSubTitle{
+    font-size: 2em;
+    color: grey;
 }
