feat: Created <PageTitle/> component and added to <RoversPage />, <PictureOfTheDay/>

--- a/src/components/APOD/apod.styles.scss
+++ b/src/components/APOD/apod.styles.scss
@@ -11,11 +11,14 @@
 }
 
 .pageTitle{
+    width: 80vw;
     font-size: 8em;
+    margin:0px;
     color: "#212121"
 }
 
 .pageSubTitle{
+    width: 80vw;
     font-size: 2em;
     color: grey;
 }
