--- a/src/components/rover-searchform/rover-searchform.styles.scss
+++ b/src/components/rover-searchform/rover-searchform.styles.scss
@@ -1,6 +1,7 @@
 .searchForm{
-    margin: 30px;
+    margin: 30px 0px 30px 0px;
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
+    justify-content: space-between;
+    padding: 0px 
 }
