--- a/src/components/rover-searchform/rover-searchform.styles.scss
+++ b/src/components/rover-searchform/rover-searchform.styles.scss
@@ -1,7 +1,23 @@
+@mixin tablet{
+    @media (max-width: 800px){
+        @content;
+    }
+}
 .searchForm{
     margin: 30px 0px 30px 0px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    padding: 0px 
+    padding: 0px;
+
+    @include tablet{
+        flex-direction: column;
+         div{
+            margin: 10px 0px 10px 0px;
+        }
+    }
+
+   
+
+
 }
