--- a/src/components/APOD/apod.styles.scss
+++ b/src/components/APOD/apod.styles.scss
@@ -1,13 +1,46 @@
+@mixin mobile{
+    @media(max-width: 500px){
+        @content
+    }
+}
+
+@mixin tablet{
+    @media(max-width: 768px){
+        @content
+    }
+}
+
+
+@mixin xltablet{
+    @media(max-width: 1024px){
+        @content
+    }
+}
+
 .apodSection{
     margin-top: 100px;
     display: flex;
     flex-direction: column;
     align-items: center;
+
 }
 
 .image-of-the-day{
     width: 80vw;
     height: 80%;
+
+    @include tablet{
+        height: 50%
+    }
+
+    @include mobile{
+        height: 30%
+    }
+
+    @include xltablet{
+        width: 95vw;
+        height: 70%;
+    }
 }
 
 .pageTitle{
