refactor: global size to PageTitle component

--- a/src/components/rover-searchform/rover-searchform.styles.scss
+++ b/src/components/rover-searchform/rover-searchform.styles.scss
@@ -5,10 +5,10 @@
 }
 
 .searchForm{
-    margin: 30px 0px 30px 0px;
+    
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-evenly;
     padding: 0px;
 
     @include tablet{
