--- a/src/components/APOD/apod.styles.scss
+++ b/src/components/APOD/apod.styles.scss
@@ -18,11 +18,15 @@
 }
 
 .apodSection{
-    margin-top: 100px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    // margin-top: 100px;
+    // display: flex;
+    // flex-direction: column;
+    // align-items: center;
 
+}
+
+.contentSection{
+    width: '70vh',
 }
 
 .image-of-the-day{
