feat: fetch earth image data and aligned page headings

--- a/src/components/rover-searchform/rover-searchform.styles.scss
+++ b/src/components/rover-searchform/rover-searchform.styles.scss
@@ -5,11 +5,10 @@
 }
 
 .searchForm{
-    
+    padding: 0px 70px 70px 70px;
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
-    padding: 0px;
+    justify-content: space-between;
 
     @include tablet{
         flex-direction: column;
