--- a/src/components/marsroverpage/marsrover.styles.scss
+++ b/src/components/marsroverpage/marsrover.styles.scss
@@ -1,13 +1,13 @@
-@mixin mobile{
-    @media(max-width: 580px){
-        @content
-    }
-}
+// @mixin mobile{
+//     @media(max-width: 580px){
+//         @content
+//     }
+// }
 
-.roverComponent{
+// .roverComponent{
 
-    @include mobile{
-        margin-top: 100px;
-        padding: 0px 10px 0px 10px;
-    }
-}
+//     @include mobile{
+//        margin-top: 70px;
+//         padding: 0px 10px 0px 10px;
+//     }
+// }
